# insurance-monitoring

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml  run_tests_baws.py  run_tests_conformal_chart.py  run_tests_coverage_gaps.py  run_tests_coverage_v1.py  run_tests_coverage_v2.py  run_tests_databricks.py  run_tests_databricks_v2.py  run_tests_databricks_v3.py  run_tests_databricks_v4.py  run_tests_gini_monitoring.py  run_tests_new_v2.py  run_tests_pricing_drift_cusum.py  run_tests_sequential.py  run_tests_sequential_verify.py  run_tests_v070.py  run_tests_v080.py  run_tests_v090.py  run_tests_v093.py  run_tests_v100.py  run_tests_v110.py  run_tests_v120.py  run_tests_v130_score_decomp.py
.github/workflows/: ci.yml  docs.yml  publish.yml  tests.yml
benchmarks/: README.md  benchmark.py  benchmark_interpretable_drift.py  benchmark_pit.py  benchmark_sequential.py  run_benchmark.py
examples/: champion_challenger_ab_test.py  home_pit_monitor.py  model_monitor_quickstart.py  motor_frequency_monitoring.py  quickstart.py  tripodd_attribution.py
notebooks/: baws_monitor_demo.py  benchmark.py  benchmark_fremtpl2_drift.py  benchmark_interpretable_drift.py  benchmark_pit.py  benchmark_sequential.py  conformal_chart_demo.py  databricks_validation.py  demo_monitoring.py  multicalibration_monitor_demo.py  quickstart.ipynb  run_tests.py  run_tests_baws.py  run_tests_conformal_chart.py  run_tests_coverage.py  run_tests_coverage_gaps.py  run_tests_coverage_v2.py  run_tests_coverage_v4.py  run_tests_gini_monitoring.py  run_tests_new_v2.py  run_tests_pricing_drift_cusum.py  run_tests_sequential.py  run_tests_v070.py  run_tests_v080.py  run_tests_v090.py  run_tests_v093.py  run_tests_v100.py  run_tests_v110.py  run_tests_v120.py  score_decomp_demo.py  sequential_testing.py
src/insurance_monitoring/: __init__.py  baws.py  business_value.py  calibration.py  conformal_chart.py  conformal_spc.py  cusum.py  discrimination.py  drift.py  drift_attribution.py  gini_drift.py  gini_monitoring.py  interpretable_drift.py  mlflow_tracker.py  model_monitor.py  multicalibration.py  pricing_drift.py  report.py  sequential.py  thresholds.py
src/insurance_monitoring/calibration/: __init__.py  _ae.py  _autocal.py  _balance.py  _checker.py  _deviance.py  _gmcb_lmcb.py  _murphy.py  _pit.py  _plots.py  _rectify.py  _score_decomp.py  _types.py  _utils.py
tests/: test_baws.py  test_business_value.py  test_calibration.py  test_calibration_autocalibration.py  test_calibration_balance.py  test_calibration_checker.py  test_calibration_deviance.py  test_calibration_murphy.py  test_calibration_pit.py  test_calibration_plots.py  test_calibration_rectify.py  test_conformal_chart.py  test_conformal_spc.py  test_coverage_expansion.py  test_coverage_expansion_v2.py  test_coverage_expansion_v3.py  test_coverage_expansion_v4.py  test_coverage_expansion_v5.py  test_coverage_expansion_v6.py  test_coverage_expansion_v7.py  test_coverage_expansion_v8.py  test_coverage_gaps.py  test_coverage_gaps_v2.py  test_cusum.py  test_discrimination.py  test_discrimination_v2.py  test_discrimination_v3.py  test_discrimination_v4.py  test_drift.py  test_drift_attribution.py  test_drift_attribution_v2.py  test_drift_v2.py  test_edge_cases_v2.py  test_gini_bootstrap.py  test_gini_drift.py  test_gini_monitoring.py  test_interpretable_drift.py  test_interpretable_drift_v2.py  test_mlflow_tracker.py  test_model_monitor.py  (+11 more)
