[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-monitoring"
version = "0.3.0"
description = "Model drift detection, monitoring, and calibration for insurance pricing models. PSI, CSI, Gini drift, A/E ratios, balance property testing, Murphy decomposition."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = ["insurance", "monitoring", "drift", "PSI", "Gini", "calibration", "murphy", "pricing", "actuarial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "polars>=0.20",
    "scipy>=1.12",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.urls]
Repository = "https://github.com/burningcost/insurance-monitoring"
Issues = "https://github.com/burningcost/insurance-monitoring/issues"
Homepage = "https://burningcost.com"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_monitoring"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
