[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-monitoring"
version = "0.8.1"
description = "Model drift detection, monitoring, calibration, and sequential A/B testing for insurance pricing models. PSI, CSI, Gini drift, A/E ratios, balance property testing, Murphy decomposition, TRIPODD drift attribution, mSPRT champion/challenger, bootstrap Gini CIs, PITMonitor e-process calibration monitoring."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = ["insurance", "monitoring", "drift", "PSI", "Gini", "calibration", "murphy", "pricing", "actuarial", "TRIPODD", "sequential", "a/b testing", "champion challenger", "mSPRT", "PIT", "e-process", "anytime-valid"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    # numpy.exceptions (used by scipy) was added in numpy 1.25
    "numpy>=1.25",
    "polars>=1.0",
    "scipy>=1.12",
    "matplotlib>=3.7",
    "sortedcontainers>=2.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "pdoc>=14.0.0"]

[project.urls]
Homepage = "https://burning-cost.github.io/insurance-monitoring"
Repository = "https://github.com/burning-cost/insurance-monitoring"
Changelog = "https://github.com/burning-cost/insurance-monitoring/releases"
Documentation = "https://burning-cost.github.io/insurance-monitoring/"
Issues = "https://github.com/burning-cost/insurance-monitoring/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_monitoring"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
