[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-monitoring"
version = "1.2.0"
description = "Model drift detection, calibration monitoring, and sequential A/B testing for insurance pricing models: PSI, Gini drift, Murphy decomposition, mSPRT champion/challenger."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = ["insurance", "monitoring", "drift", "PSI", "Gini", "calibration", "murphy", "pricing", "actuarial", "TRIPODD", "sequential", "a/b testing", "champion challenger", "mSPRT", "PIT", "e-process", "anytime-valid", "mlflow", "loss ratio", "LRE", "model value"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "numpy>=2.0",
    "polars>=1.0",
    "scipy>=1.12",
    "matplotlib>=3.7",
    "sortedcontainers>=2.4",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "pdoc>=14.0.0", "pandas>=2.0"]
mlflow = ["mlflow>=3.0", "pyarrow>=14.0"]
sklearn = ["scikit-learn>=1.3"]

[project.urls]
Homepage = "https://burning-cost.github.io/"
Repository = "https://github.com/burning-cost/insurance-monitoring"
Changelog = "https://github.com/burning-cost/insurance-monitoring/releases"
Documentation = "https://burning-cost.github.io/insurance-monitoring"
"Bug Tracker" = "https://github.com/burning-cost/insurance-monitoring/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_monitoring"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests"]
